# storytime

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  README.rst  app.py  app.yaml  deployit.sh  development.html  dialog.html  genindex.html  index.html  install_from_github.html  list_view.css  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  story.html  story.md  story.py  test_story.py  textapp.py  usage.html
.doctrees/: development.doctree  dialog.doctree  environment.pickle  index.doctree  install_from_github.doctree  story.doctree  usage.doctree
.github/workflows/: documentation.yaml  todos.yml
_sources/: index.rst.txt  install_from_github.rst.txt  story.rst.txt  usage.rst.txt
assets/: app.css  create_readmegif.sh  readme.cast
data/: chatgpttest.md  minimal.md  minimal2.md  story.json  story.md  story_with_properties.md
docs/: conf.py  development.md  dialog.rst  index.rst  precomm.sh  usage.rst
gptstory/: __init__.py  gptstory.py
story/: __init__.py  require_decorator.py  story.py
storytime_ai/: __init__.py  app.py  choice.py  dialog.py  messagelog.py  mylog.py  require_decorator.py  story.py  summarize_famous_stories.py  textual_app.py  utils.py  webapp.py
storytime_ai/templates/: app.css  broken.md  messagelog.html  minimal.md  webapp.css
test/: README.md  test_generate.py  test_gptstory.py  test_graph.py  test_messagelog.py  test_story.py
