[tool.poetry]
name = "storytime_ai"
version = "0.2.1"
description = "View and create interactive stories in terminal"
authors = ["Dronakurl <konrad2710@gmail.com>"]
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = ["interactive", "terminal", "textual", "game", "openai"]
homepage = "https://github.com/Dronakurl/storytime/"
repository = "https://github.com/Dronakurl/storytime/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Role-Playing",
]


[tool.poetry.dependencies]
python = "^3.11"
networkx = {version = "^3.1", optional = true}
matplotlib = {version = "^3.7.1", optional = true}
openai = {version = "^0.27.7", optional = true}
textual = { version="^0.27.0", optional = true}
streamlit = { version="*", optional = true}
pandas = { version="*", optional = true}
python-dotenv = "^1.0.0"

[tool.poetry.extras]
extras = ["networkx", "matplotlib", "openai", "textual", "streamlit", "pandas"]
textual = ["textual"]
webapp = ["streamlit", "pandas"]

[tool.poetry.scripts]
storytime-cli = { callable = "storytime_ai:story.simpleplay" }
storytime-checker = { callable = "storytime_ai:story.checkintegrity" }
storytime-tui = { callable = "storytime_ai:app.startapp", extras = ["textual"] }
storytime = { callable = "storytime_ai:streamlit_app",  extras = ["webapp"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.2.2"
pillow = "^9.5.0"
pytest-asyncio = "^0.21.0"
sphinx = "<=6"
sphinx-rtd-theme = "^1.2.2"
myst-parser = "^1.0.0"
textual = {extras = ["dev"], version = "^0.27.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pyright]
include = ["**/*.py"]
exclude = [ "**/__pycache__",
    ".archiv/**"
    , "storytime_ai/templates/*.md"
]
ignore = ["**/__init__.py"]
typeCheckingMode = "off"
reportGeneralTypeIssues = false
reportMissingTypeStubs = false
useLibraryCodeForTypes = false
pythonVersion = "^3.11"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "-ra -q",
    # "--disable-warnings",
    "--ignore=.archiv",
]
pythonpath = ["."]
testpaths = [
    "tests",
]
