[tool.poetry]
name = "storytime_ai"
version = "0.3.0"
description = "View and create interactive stories in terminal"
authors = ["Dronakurl <konrad2710@gmail.com>"]
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = ["interactive", "terminal", "textual", "game", "openai"]
homepage = "https://github.com/Dronakurl/storytime/"
repository = "https://github.com/Dronakurl/storytime/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Role-Playing",
]


[tool.poetry.dependencies]
python = "^3.11"
# pandas = "2.0.3"
pandas = "*"
networkx = {version = "*", optional = true}
matplotlib = {version = "*", optional = true}
openai = {version = "*", optional = true}
textual = { version="*", optional = true}
streamlit = { version="*", optional = true}
python-dotenv = "*"

[tool.poetry.extras]
extras = ["networkx", "matplotlib", "openai", "textual", "streamlit"]
textual = ["textual"]
webapp = ["streamlit", "openai"]

[tool.poetry.scripts]
storytime-cli = { callable = "storytime_ai:story.simpleplay" }
storytime-checker = { callable = "storytime_ai:story.checkintegrity" }
storytime-tui = { callable = "storytime_ai:app.startapp", extras = ["textual"] }
storytime = { callable = "storytime_ai:streamlit_app",  extras = ["webapp"]}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
pillow = "*"
pytest-asyncio = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
myst-parser = "*"
textual = {extras = ["dev"], version = "*"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pyright]
include = ["**/*.py"]
exclude = [ "**/__pycache__",
    ".archiv/**"
    , "storytime_ai/templates/*.md"
]
ignore = ["**/__init__.py"]
typeCheckingMode = "off"
reportGeneralTypeIssues = false
reportMissingTypeStubs = false
useLibraryCodeForTypes = false
pythonVersion = "^3.11"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "-ra -q",
    # "--disable-warnings",
    "--ignore=.archiv",
]
pythonpath = ["."]
testpaths = [
    "tests",
]
